# test_repo

./: .gitignore  readme.md
.github/workflows/: format.yml  rust.yml
aliases/: aliases.sh
test-repo/: Cargo.toml
test_repo/: .env  Cargo.toml  data.json  test.txt
test_repo/src/: main.rs  web3.rs
test_repo/test_data/: test.json
test_repo/tests/: main_test.rs
