[package]
name = "test_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "2.0", features = ["rustls"]}
tokio =  { version = "1", features = ["macros", "full", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
colored = "2.1.0"
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
clap = { version = "~4.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }


serde_json = "1"
serde = { version = "1", features = ["derive"]}